--- a/charts/api/templates/service.yaml
+++ b/charts/api/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "nacos.fullname" . }}
+  name: {{ include "api.fullname" . }}
   namespace: {{ .Values.namespace }}
 spec:
   type: {{ .Values.service.type }}
   selector:
-    app: {{ include "nacos.fullname" . }}
+    app: {{ include "api.fullname" . }}
   ports:
     - name: http
       port: {{ .Values.service.port }}
