--- a/charts/urule/templates/deployment.yaml
+++ b/charts/urule/templates/deployment.yaml
@@ -5,6 +5,13 @@ metadata:
   namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  strategy:
+    type: {{ .Values.strategy.type }}
+    rollingUpdate:
+      maxUnavailable: {{ .Values.strategy.rollingUpdate.maxUnavailable }}
+      maxSurge: {{ .Values.strategy.rollingUpdate.maxSurge }}
+  
+  replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
       app: {{ include "urule.fullname" . }}
