--- a/charts/urule/urule-ghana-test.yaml
+++ b/charts/urule/urule-ghana-test.yaml
@@ -1,6 +1,11 @@
 namespace: ghana
 
 replicaCount: 3
+strategy:
+  type: RollingUpdate
+  rollingUpdate:
+    maxUnavailable: 0
+    maxSurge: 1
 
 image:
   repository: harbor.bjxsre.com/bjx-ghana-test/urule
