--- a/charts/urule/urule-ghana-prod.yaml
+++ b/charts/urule/urule-ghana-prod.yaml
@@ -1,10 +1,15 @@
 namespace: ghana
 
-replicaCount: 1
+replicaCount: 3
+strategy:
+  type: RollingUpdate
+  rollingUpdate:
+    maxUnavailable: 0
+    maxSurge: 1
 
 image:
   repository: harbor.bjxsre.com/bjx-ghana-test/urule
-  tag: 
+  tag: dev_gh-38-20251103110718
   pullPolicy: IfNotPresent
 
 service:
@@ -25,7 +30,6 @@ ingress:
     alb.ingress.kubernetes.io/success-codes: 200-499
     external-dns.alpha.kubernetes.io/hostname: k8s-urule-ghana.bjxsre.com
     external-dns.alpha.kubernetes.io/ttl: "60"
-
 env:
   COUNTRY: ghana
   TIMEZONE: Africa/Accra
